bugfixes after unit tests
Signed-off-by: Bernd Weymann <bernd.weymann@gmail.com>

--- a/bundles/org.openhab.binding.mercedesme/changes.txt
+++ b/bundles/org.openhab.binding.mercedesme/changes.txt
@@ -1,1 +1,2 @@
 - merged sunroof-control channel into sunroof - sunroof is now writable with command options
+- update proto-update channel only if item is linked to reduce logging
