bugfixes thing update and temperatures
Signed-off-by: Bernd Weymann <bernd.weymann@gmail.com>

--- a/bundles/org.openhab.binding.mercedesme/changes.txt
+++ b/bundles/org.openhab.binding.mercedesme/changes.txt
@@ -1,7 +1,9 @@
+- proto-update contains now binding version and vehicle type
+- proto-update channel only updated if item is linked to reduce logging
 - merged doors#sunroof-control channel into doors#sunroof 
   Channel is now writable with command options described in readme
 - merged window#windows-control channel and vehicle#window-sattus into vehicle#windows. 
   Channel is now writable with command options described in readme
 - merged lock#lock-control with #vehicle#lock-status into vehicle#lock
   Channel is now writable with command options described in readme
-- update proto-update channel only if item is linked to reduce logging
+- bugfix channel update after adding vehicle thing
