--- a/bundles/org.openhab.binding.mercedesme/src/main/resources/OH-INF/i18n/mercedesme.properties
+++ b/bundles/org.openhab.binding.mercedesme/src/main/resources/OH-INF/i18n/mercedesme.properties
@@ -75,7 +75,7 @@ channel-group-type.mercedesme.window-values.description = Detailed Status Window
 
 channel-type.mercedesme.active-channel.label = Charge Active
 channel-type.mercedesme.active-hvac-channel.label = AC Control
-channel-type.mercedesme.auto-unlock-channel.label = Charge Coupler Auto Unlock
+channel-type.mercedesme.auto-unlock-channel.label = Coupler Auto Unlock
 channel-type.mercedesme.aux-heat-channel.label = Auxiliary Heating Control
 channel-type.mercedesme.avg-speed-channel.label = Trip Average Speed
 channel-type.mercedesme.avg-speed-reset-channel.label = Rst Average Speed
@@ -164,7 +164,7 @@ channel-type.mercedesme.ignition-channel.command.option.0 = Off
 channel-type.mercedesme.ignition-channel.command.option.4 = On
 channel-type.mercedesme.last-update-channel.label = Tire Update Time
 channel-type.mercedesme.last-update-channel.state.pattern = %1$tA, %1$td.%1$tm. %1$tH:%1$tM
-channel-type.mercedesme.lock-channel.label = Lock Status
+channel-type.mercedesme.lock-channel.label = Lock Status/Control
 channel-type.mercedesme.lock-channel.state.option.0 = Locked
 channel-type.mercedesme.lock-channel.state.option.1 = Unlocked
 channel-type.mercedesme.lock-channel.command.option.0 = Lock
@@ -251,7 +251,7 @@ channel-type.mercedesme.windows-channel.label = Windows Status/Control
 channel-type.mercedesme.windows-channel.state.option.0 = Intermediate
 channel-type.mercedesme.windows-channel.state.option.1 = Closed
 channel-type.mercedesme.windows-channel.state.option.2 = Open
-channel-type.mercedesme.windows-channel.command.option.0 = Close
-channel-type.mercedesme.windows-channel.command.option.1 = Open
-channel-type.mercedesme.windows-channel.command.option.2 = Ventilate
+channel-type.mercedesme.windows-channel.command.option.0 = Ventilate
+channel-type.mercedesme.windows-channel.command.option.1 = Close
+channel-type.mercedesme.windows-channel.command.option.2 = Open
 channel-type.mercedesme.zone-hvac-channel.label = AC Zone
